# data-analysis

./: .gitignore  README.md  REORG_PLAN.md  data_analysis_utils.py  lp_analysis.py  lp_iv_analysis.py  plasma_utils.py  plot_utils.py  pyproject.toml  spectroscopy_analysis.py  two_chamber_vacuum.py
CTS/: CTS.py  CTS_test.ipynb  sheffield_spetral.py
compute_B/: LAPD_coil_set.h  LAPD_coil_set.py  README.md  __init__.py  example.py  magnetic_field_calculator.py
epfl/: CRDS.ipynb  birdcage_current.ipynb  calibrate_power.py  crds_tools.py  interf.ipynb
experiments/: two_chamber_vacuum.py
experiments/cts/: CTS_test.ipynb
experiments/epfl/: calibrate_power.py  crds_tools.py
experiments/object_tracking/: README.md  fastcam_test.ipynb
experiments/ucla-lapd/: interf_save.py
experiments/ucla-lapd/Aug-2025/: README.md  compare_bdot_groups.py  export_xray_npz.py  lapd_io.py  lp.ipynb  movie_maker.py  plot_bdot.py  process_bdot.py  process_xray.py  test.ipynb  tracking_utils.py
experiments/ucla-lapd/Jan-2024/: Jan2024_Isat.py  Jan2024_calibration.ipynb  Jan2024_calibration_plane.ipynb  Jan2024_experiment_plane.ipynb
experiments/ucla-lapd/Jun-2026/: Jun2026_IV.py  Jun2026_IV_explore.ipynb  Jun2026_Isat.py  Jun2026_Isat_explore.ipynb  Jun2026_plot.py  Jun2026_run_overview.ipynb  Jun2026_xcorr.py  Jun2026_xcorr_explore.ipynb  group_by_gas_puff.py
experiments/ucla-lapd/Mar-2026/: Mar2026_IV.py  Mar2026_emissive.py  Mar2026_experiment.ipynb  Mar2026_mach.py
experiments/ucla-lapd/Nov-2024/: bdot_test.ipynb  plot_xray_shots.py  process_xray_bdot.py  xray_test.ipynb
object_tracking/: README.md  __init__.py  evaluate_freefall_accuracy.py  fastcam_test.ipynb  generate_tracking.py  main.py  read_cine.py  test.ipynb  track_object.py
read/: read_hdf5.py  read_network_analyzer_data.py  read_scope_data.py
src/data_analysis/: __init__.py  utils.py
src/data_analysis/io/: LeCroy_Scope_Header.py  README.md  __init__.py  cine.py  interferometer.py  lapd_hdf5.py  network_analyzer.py  paths.py  prompts.py  scope.py  scope_reader.py
src/data_analysis/io/_backends/: __init__.py  bapsflib_daq.py  legacy_2018.py  pydaq.py  run_description.py
src/data_analysis/plasma/: __init__.py  langmuir.py  photons.py  sheffield_thomson.py
src/data_analysis/signal/: __init__.py  core.py
src/data_analysis/tracking/: __init__.py  evaluate_freefall_accuracy.py  generate_tracking.py  track_object.py
src/data_analysis/viz/: __init__.py  plot_utils.py
ucla-lapd/: Jan2024.ipynb  interf_raw.py  interf_save.py  read_hdf5.py  read_hdf5_bapsflib.py  read_hdf5_pydaq.py
ucla-lapd/Aug-2025/: README.md  compare_bdot_groups.py  export_xray_npz.py  lapd_io.py  lp.ipynb  movie_maker.py  plot_bdot.py  process_bdot.py  process_xray.py  process_xray_bdot_hdf5.py  test.ipynb
ucla-lapd/Jan-2024/: Jan2024_Isat.py  Jan2024_calibration.ipynb  Jan2024_calibration_plane.ipynb  Jan2024_experiment.ipynb  Jan2024_experiment_plane.ipynb
ucla-lapd/Mar-2026/: Mar2026_IV.py  Mar2026_emissive.py  Mar2026_experiment.ipynb  Mar2026_mach.py
ucla-lapd/Nov-2024/: bdot_test.ipynb  data_write.ipynb  plot_xray_shots.py  process_xray_bdot.py  xray_test.ipynb
ucla-processing/: read_hdf5.py
